data/derived/fa15/progs/unify/prog1966.ml.out
Characters 56-58:
  let fixpoint (f,b) = wwhile ((let f' x = (f,f x = x) in f'),b);;
                                                          ^^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
